# Effective-Topological-Coverage-ETC

./: .gitignore  LICENSE  README.md  comparison_demo.py  demo_visualization.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: phase_diagram_visualization.md
examples/: 00_build_graphs.ipynb  00_show_H_examples.ipynb  00_small_graphs.ipynb  01_H_cache.ipynb  01_phase_diagrams.ipynb  02_sampling_sensitivity.ipynb  1_tutorial_h_ examples.ipynb  G1_pd.npy
examples/etc_utils/: __init__.py  graph_models.py  hamiltonian.py  hmin_hmax.py  improved_phase_diagram_example.py  metrics.py  parameters_tunning.py  phase_diagrams.py  sampling.py
notebooks/: 00_HUMAN1_properties.ipynb  01_Daniel_compilation.ipynb  02_Afekta_Pilot_Study.ipynb  02_PilotStudy_DC03.ipynb  02_Robustness_study.ipynb  03_Daniel_compilation.ipynb  03_Recon2.ipynb  PathwayGaps.ipynb  data_processing.ipynb
scripts/: CompGraph_met4j.sh  CompGraph_met4jHuman2.sh  extract_inchikeys_from_metanx.py
src/etc/: __init__.py  cli.py  coverage.py  hamiltonian.py  landscape_diagrams.py  optimization.py  parse_ids.py  sampling.py  utils.py  visualization.py
tests/: conftest.py  test_hamiltonian_class.py  test_hamiltonian_wrappers.py  test_landscape_diagrams.py  test_optimization.py  test_parse_ids.py  test_visualization.py
