[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "effective-topological-coverage"
version = "0.1.0"
description = "Energy-based evaluation of topological coverage in metabolic networks"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
    { name = "Sandra Costa" }
]

dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "matplotlib",
    "pandas",
    "ortools",
]


[project.optional-dependencies]
test = [
    "pytest>=8"
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[project.scripts]
etc = "etc.cli:main"